# lobster-price-monitor

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  NEXT_AGENT.md  RALPH.md  README.md  SPRINT.md  pyproject.toml  requirements.txt  setup_fb_cookies.md
.github/workflows/: README.md  verify.yml
assets/fonts/: caveat.css
data/: board.html
deploy/: crontab.example  lobster-price-monitor-scrape.plist  lobster-price-monitor-scrape.service  lobster-price-monitor-scrape.timer  lobster-price-monitor-serve.plist  lobster-price-monitor-serve.service
deploy/launchd/: com.erik.lobster-price-monitor.health.plist  com.erik.lobster-price-monitor.scrape.ops.plist  com.erik.lobster-price-monitor.scrape.plist  com.erik.lobster-price-monitor.serve.plist  com.erik.lobster-price-monitor.watchdog.plist
deploy/systemd/: lobster-price-monitor-health.service  (+8 more)
scripts/: __init__.py  archive_board.py  board.py  board_labels.py  board_lobster.py  board_meta.py  board_render.py  bootstrap_host.sh  chalk_board_html.py  ddg_search.py  demote_ops.sh  deploy_host.sh  dry_run.sh  fb_curl_fetch.py  fetch_market_logos.py  font_embed.py  generate_ci_bplus_fixtures.py  google_cse.py  health_check.py  host_health_state.py  install.sh  install_scheduler.sh  manual_import.py  market_coverage.py  market_logos.py  market_names.py  markets.py  parse_prices.py  parse_web.py  preflight_secrets.sh  promote_ops.sh  quality_gate.py  rebuild_host.sh  recover_actions.py  recover_host.sh  redeploy_host.sh  refresh_ci_fixture_dates.py  reprovision_host.sh  run_scrape.sh  scrape_markets.py  (+58 more)
(+8 files in other folders)
