[project]
name = "lobster-price-monitor"
version = "1.1.0"
description = "Maine coastal seafood market price monitor"
requires-python = ">=3.11"
dependencies = [
    "facebook-scraper==0.2.59",
    "lxml_html_clean==0.4.5",
    "curl_cffi==0.15.0",
    "browser-cookie3==0.20.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"
